--- a/style.css
+++ b/style.css
@@ -16,8 +16,12 @@ header {
 }
 
 main {
-    background-color: blue;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
     height: 60%;
 }
 
